test/cases/bad/bad029.lat
// Reserved keyword

void foo(int self) {
    
}

int main() {
}